  uniform scaling op (e.g. Circles have setRadius())! But setScale() seems OK.).
  BUT: they are likely dynamically allocated, so...


------------------------------------------------------------------------------
  DONE                (See the Git log! These are just supplementary details.)
------------------------------------------------------------------------------

+ [fix-zoom-collide-off] Colliding bodiies don't touch properly when zoomed away from the default...
  -> [body-center-offset]
  + Disappeared after [fix-hud-mystery]...

+ [fix-hud-mystery] Enabling the HUD -- even if empty! -- causes really mysterious
  problems with inconsistent memory states etc., similar to [fix-random-no-shapes]!
  Without threading, too.
  (No shapes, no movement, totally botched _SCALE value -- despite being fine in a
  prev. call frame -- etc...)
  ? Is it something about font loading?

  ->  OK, eliminating even #including the HUD, but replacing it with a dummy, mock data 
    member also triggers the same shit! :-o So it's unlikley that it comes from SFML.
    -> Wow, even if the replacement is an empty struct, the error is still there! :-o
       Like just adding `struct X {} dummy;`! :-ooo

	-> WOW! Even better! With `#define HUD_ENABLED`, this fails (reproducibly):

		#ifdef HUD_ENABLED
		int dummy;
		#endif

	But this runs just fine:

		#ifdef HUD_ENABLED
		#endif
		int dummy;

	...with both static and dll-based builds, and both debug and non-debug...
	Again, with threading disabled, too.
	Also backed down from c++latest to c++20 -- same thing!

	:-o Fascinating!...

  + Mmm... Well, Solved it!... :-o The solution was... umm... not forgetting to include the
    config #defines consistently in all the compilation units! :-o :D Well... It was fun
    while it lasted...

+ [fix-random-no-shapes] Sometimes (also apparently depending on supposedly unrelated code changes),
  nothing is drawn from the model world, only the HUD! :-o